...
                android:text="Cancel"
                android:textAllCaps="false"
                android:textColor="@android:color/black"
                app:cornerRadius="8dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_dialog_delete"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#E53935"
                android:text="Delete"
                android:textAllCaps="false"
...
